plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	maven {
		// location of the maven that hosts JEI files since January 2023
		name = "Jared's maven"
		url = "https://maven.blamejared.com/"
	}
	maven {
		// location of a maven mirror for JEI files, as a fallback
		name = "ModMaven"
		url = "https://modmaven.dev"
	}
	maven {
		name "REI"
		url "https://maven.shedaniel.me/"
		content {
			includeGroup "me.shedaniel"
			includeGroup "me.shedaniel.cloth"
			includeGroup "dev.architectury"
		}
	}
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"daedalic-replication" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

fabricApi {
	configureDataGeneration()
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// Tech Reborn for energy
	include api("teamreborn:energy:${project.tr_energy_version}")

	// compile against the JEI API but do not include it at runtime
	compileOnly("mezz.jei:jei-${project.minecraft_version}-fabric-api:${project.jei_version}")
	// at runtime, use the full JEI jar for NeoForge
	runtimeOnly("mezz.jei:jei-${project.minecraft_version}-fabric:${project.jei_version}")

	// REI Runtime for Fabric
	runtimeOnly("me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}")

	compileOnly("me.shedaniel:RoughlyEnoughItems-api-fabric:${rei_version}")
	compileOnly("me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${rei_version}")

	compileOnly("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config}")
	compileOnly("dev.architectury:architectury-fabric:${project.architectury_version}")
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

